fixed overflow issue

--- a/main.css
+++ b/main.css
@@ -35,6 +35,7 @@ a {
 .page-container {
     display: block;
     text-align: center;
+    overflow: hidden;
 }
 
 .lock-container {
